Dark Mode Fix - HomePage

--- a/components/v2/Awards/AwardCard/AwardCard.module.css
+++ b/components/v2/Awards/AwardCard/AwardCard.module.css
@@ -40,7 +40,7 @@
 	background-color: var(--light-blue);
 }
 .NormalButton {
-	background-color: var(--orange);
+	background-color: var(--light-blue);
 }
 .TitleAndDescription {
 	width: 100%;
